--- a/index.html
+++ b/index.html
@@ -24,14 +24,20 @@
       }
 
       .container {
+        padding: 1rem;
+        box-sizing: border-box;
         height: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
       }
 
-      h1 {
-        text-decoration: underline;
+      .blotup-logo {
+        width: 100%;
+      }
+
+      h3 {
+        margin-top: 2rem;
       }
 
       p {
@@ -56,8 +62,8 @@
   <body>
     <div class="container">
       <div>
-        <h1>blotup</h1>
-        <p>We are building social platform for customised products</p>
+        <img class="blotup-logo" src="./logo.svg" alt="blotup" />
+        <h3>We are building social platform for customised products</h3>
       </div>
     </div>
   </body>
